@@ -4,6 +4,7 @@ def fatJarName = 'stroom-proxy-app-all.jar'
 def releaseBuildDir = 'build/release'
 def configDefaultsFile = "${releaseBuildDir}/config/config-defaults.yml"
 def configSchemaFile = "${releaseBuildDir}/config/config-schema.yml"
+def sendToStroomScriptVersion = 'send-to-stroom-v3.2.2-1'
 
 apply plugin: 'application'
 apply plugin: 'com.github.johnrengelman.shadow'
@@ -211,10 +212,81 @@ tasks.register('buildDistribution', Zip) {
     // run all the tasks that produce content for the zip
     dependsOn copyJar
     dependsOn copySupportingFiles
+    dependsOn downloadSend
+    dependsOn downloadSendArgs
+    dependsOn makeSendExecutable
     dependsOn generateConfigFiles
     dependsOn generateConfigDefaultsYamlFile
 
     from releaseBuildDir
+}
+
+tasks.register('Stroom Proxy Node 1', JavaExec) {
+    doFirst {
+        // We have to alter the existing jvm args rather than set them so that we don't lose debug args added by
+        // IJ Idea.
+        def jvmArgsCopy = []
+        for (arg in jvmArgs) {
+            jvmArgsCopy.add(arg)
+        }
+        //    -DgwtSuperDevMode=true
+        //    -Xmx4g
+        //    -Devent.logging.validate=true
+        //    --add-opens java.base/java.nio=ALL-UNNAMED
+        //    --add-opens java.base/sun.nio.ch=ALL-UNNAMED
+        //    --add-opens java.base/java.lang=ALL-UNNAMED
+        jvmArgsCopy.add("-Xmx4g")
+        jvmArgsCopy.add("-Devent.logging.validate=true")
+        jvmArgsCopy.add("--add-opens")
+        jvmArgsCopy.add("java.base/java.nio=ALL-UNNAMED")
+        jvmArgsCopy.add("--add-opens")
+        jvmArgsCopy.add("java.base/sun.nio.ch=ALL-UNNAMED")
+        jvmArgsCopy.add("--add-opens")
+        jvmArgsCopy.add("java.base/java.lang=ALL-UNNAMED")
+        jvmArgs = jvmArgsCopy
+    }
+
+    group = 'application'
+    classpath = sourceSets.main.runtimeClasspath
+    mainClass = 'stroom.proxy.app.App'
+    workingDir = '../../'
+    args = ['server', 'proxy-local.yml']
+}
+
+tasks.register('downloadSend', Download) {
+    dependsOn copySupportingFiles
+    src "https://github.com/gchq/stroom-clients/releases/download/${sendToStroomScriptVersion}/send_to_stroom.sh"
+    dest "${releaseBuildDir}/bin/"
+
+    // Github rate limits unless you authenticate so use the special
+    // auto generated workflow GITHUB_TOKEN
+    def token = "$System.env.PAT_FOR_PUBLIC_REPOS"
+    if (token != null && token != "") {
+        header 'Authorization', "Bearer $token"
+    }
+}
+
+tasks.register('downloadSendArgs', Download) {
+    dependsOn copySupportingFiles
+    src "https://github.com/gchq/stroom-clients/releases/download/${sendToStroomScriptVersion}/send_to_stroom_args.sh"
+    dest "${releaseBuildDir}/bin/"
+
+    // Github rate limits unless you authenticate so use the special
+    // auto generated workflow GITHUB_TOKEN
+    def token = "$System.env.PAT_FOR_PUBLIC_REPOS"
+    if (token != null && token != "") {
+        header 'Authorization', "Bearer $token"
+    }
+}
+
+tasks.register('makeSendExecutable') {
+    dependsOn downloadSend
+    doLast {
+        // The args script is sourced so doesn't need execute perms
+        exec {
+            commandLine 'chmod', '+x', "${releaseBuildDir}/bin/send_to_stroom.sh"
+        }
+    }
 }
 
 // Make the build command create the full distribution
